welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:39: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:60: error: Unmatched closing brace '}' ignored here
}
^